# iaragon

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  gleam.toml  install.sh  manifest.toml
.claude/rules/: 00-README.md  commit-messages-without-shell-evaluation.md  confirm-before-irreversible-or-outward-facing.md  exhaustive-match-no-underscore.md  never-invent-drive-or-library-behavior.md  ran-it-before-claiming-it.md  separate-fact-from-speculation.md  small-coherent-commits.md  tdd-red-before-green.md  test-the-seams-you-cannot-run.md  user-content-goes-to-trash-never-unlink.md  verify-in-code-not-memory.md
.claude/skills/bash-lsp/: .lsp.json
.claude/skills/clangd-lsp/: .lsp.json
.claude/skills/erlang-lsp/: .lsp.json
.claude/skills/security-review/: SKILL.md
.githooks/: pre-commit  pre-push
Formula/: iaragon.rb
docs/: architecture.md  data-safety.md  development-log.md  distribution.md  drive-api.md  performance.md  security-log.md
integrations/dolphin/: CMakeLists.txt  README.md  iaragonoverlayplugin.cpp  iaragonoverlayplugin.h
integrations/tray/: Cargo.toml  README.md
integrations/tray/src/: main.rs
packaging/: README.md
packaging/aur/: PKGBUILD
packaging/deb/: build-deb.sh
packaging/rpm/: iaragon.spec
scripts/: build-release.sh  publish-apt.sh  publish-release.sh  setup-dev.sh
src/: iaragon.gleam  iaragon_download_ffi.erl  iaragon_exec_ffi.erl  iaragon_file_ffi.erl  iaragon_loopback_ffi.erl  iaragon_probe_ffi.erl  iaragon_status_ffi.erl
src/iaragon/: doctor.gleam  login.gleam
src/iaragon/application/: diagnostics.gleam  onboarding.gleam  reconciler.gleam  state_owner.gleam  status_board.gleam
src/iaragon/domain/: conflicts.gleam  decision.gleam  entry.gleam  link_file.gleam  native_docs.gleam  paths.gleam  reconcile.gleam  safety.gleam
src/iaragon/infrastructure/: supervision.gleam
test/: iaragon_bench_ffi.erl  iaragon_fake_drive_ffi.erl  iaragon_preconnect_ffi.erl  iaragon_serve_once_ffi.erl  iaragon_status_client_ffi.erl  iaragon_touch_ffi.erl
test/iaragon/application/: diagnostics_test.gleam  (+4 more)
test/support/: fakes.gleam
(+65 files in other folders)
